# claude-rust-tutor

./: .gitignore  Cargo.toml  Dockerfile.dist  LICENSE  README.md  REFACTOR-PLAN-2026-05-24.md
.github/workflows/: build.yml
src/: llm.rs  locale.rs  main.rs  prompt.rs  prompt_policy.rs  sanitize.rs
src/llm/: client.rs  providers.rs
